--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     "dob_str": "January 1st 1975",
                     "age": 45,
                     "nam": {
-                        "fn": "Denver2",
+                        "fn": "Denver",
                         "gn": "John",
                         "fnt": "DENVER",
                         "gnt": "JOHN"
