github actions to depoy static site

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="Covid Scan Web">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://covid-scan.link/">
-    <meta property="og:description" content="Covid Scan Web">
-    <meta property="og:image" content="image.png">
+    <meta property="og:description" content="Scan CST and DGC QR codes without any application">
+    <meta property="og:image" content="/public/img/favicon-152x152.png">
 
     <link rel="icon" type="image/png" sizes="32x32" href="/public/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/public/img/favicon-16x16.png">
