--- a/generate.html
+++ b/generate.html
@@ -37,9 +37,9 @@
         function data() {
             return {
                 "pass": {
-                    "firstName": "John",
-                    "lastName": "Denver",
-                    "purpose": "Beer",
+                    "firstName": "",
+                    "lastName": "",
+                    "purpose": "",
                 },
                 "form": true,
                 "complete": function () {
