--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <p class="text-center text-base"><span x-text="pass.age"></span> y. / Tested <span x-text="pass.t[0].daysAgo"></span> days ago</p>
     </div>
     <div x-show="pass.type == 'f'" class="bg-yellow-200">
-        <p class="text-center text-base">Valid <span x-text="pass.f[0].t"></span> for <span x-text="pass.f[0].p"></span> created <span x-text="pass.t[0].daysAgo"></span> days ago</p>
+        <p class="text-center text-base">Valid <span x-text="pass.f[0].t"></span> for <span x-text="pass.f[0].p"></span> created <span x-text="pass.f[0].daysAgo"></span> days ago</p>
     </div>
 </header>
 <main class="photo flex-1 overflow-y-auto bg-black" id="videoContainer"></main>
