--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             const realWidth = window.screen.width * window.devicePixelRatio;
             const realHeight = window.screen.height * window.devicePixelRatio;
             const aspectRatio = realHeight / realWidth;
-            console.log(`Your screen resolution is: ${realWidth} x ${realHeight}`);
-            console.log(`Your aspect ration is: ${aspectRatio}`);
+            //console.log(`Your screen resolution is: ${realWidth} x ${realHeight}`);
+            //console.log(`Your aspect ration is: ${aspectRatio}`);
             return aspectRatio;
         }
     </script>
