--- a/generate.html
+++ b/generate.html
@@ -37,11 +37,11 @@
         function data() {
             return {
                 "pass": {
-                    "firstName": "",
-                    "lastName": "",
-                    "purpose": "",
+                    "firstName": "Pierre",
+                    "lastName": "Losson",
+                    "purpose": "Beer",
                 },
-                "form": true,
+                "form": false,
                 "complete": function () {
                     return this.pass.firstName && this.pass.lastName && this.pass.purpose;
                 },
@@ -67,16 +67,17 @@
                     });
 
                     this.form = false;
-                    setTimeout(() => {
+                    /*setTimeout(() => {
                         let qelem = document.querySelector('#qrcode img')
                         let dlink = document.querySelector('#qrdl')
                         let qr = qelem.getAttribute('src');
                         dlink.setAttribute('href', qr);
                         dlink.setAttribute('download', this.cst() + ".png");
                         dlink.removeAttribute('hidden');
-                    }, 100);
+                    }, 100);*/
                 },
                 "init": function () {
+                    this.generate();
                 },
             }
         }
@@ -96,53 +97,48 @@
 </head>
 
 <body x-data="data" id="body" class="flex flex-col">
-<header class="sticky top-0 z-50 flex flex-col bg-white p-2 font-medium">
-    <div class="flex flex-row">
-    </div>
-</header>
-<main class="photo flex-1 overflow-y-auto bg-white">
-    <div id="form" class="w-full" x-show="form">
-        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="firstName">
-                    First Name
-                </label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                       id="firstName" type="text" placeholder="John" x-model="pass.firstName">
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="lastName">
-                    Last Name
-                </label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                       id="lastName" type="text" placeholder="Denver" x-model="pass.lastName">
-            </div>
-            <div class="mb-6">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="purpose">
-                    What do I want ?
-                </label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                       id="purpose" type="text" placeholder="Beer" x-model="pass.purpose">
-            </div>
-            <div class="mt-2" x-show="complete()">
-                <a href="#" x-on:click="generate"
-                   class="content-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Generate
-                    my <span
-                            x-text="cst"></span></a>
-            </div>
-        </form>
-    </div>
-    <div id="result" x-show="!form" class="p-4 flex flex-col items-center">
-        <div id="qrcode"></div>
-        <div id="download" class="mt-5">
-            <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" id="qrdl"
-               hidden>Download</a>
+<div id="form" class="w-full" x-show="form">
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="firstName">
+                First Name
+            </label>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                   id="firstName" type="text" placeholder="John" x-model="pass.firstName">
         </div>
-        <div class="mt-5">
-            <a href="#" x-on:click="form=true">Back</a>
+        <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="lastName">
+                Last Name
+            </label>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                   id="lastName" type="text" placeholder="Denver" x-model="pass.lastName">
         </div>
+        <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="purpose">
+                What do I want ?
+            </label>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                   id="purpose" type="text" placeholder="Beer" x-model="pass.purpose">
+        </div>
+        <div class="mt-2" x-show="complete()">
+            <a href="#" x-on:click="generate"
+               class="content-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Generate
+                my <span
+                        x-text="cst"></span></a>
+        </div>
+    </form>
+</div>
+<div id="result" x-show="!form" class="p-4 flex flex-col items-center">
+    <div class=""><span x-text="cst"></span></div>
+    <div id="qrcode" class="p-3 border-blue-500 rounded-2xl border-4"></div>
+    <div id="download" class="mt-5">
+        <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" id="qrdl"
+           hidden>Download</a>
     </div>
-</main>
+    <div class="mt-5">
+        <a href="#" x-on:click="form=true">Back</a>
+    </div>
+</div>
 </body>
 </html>
 
