--- a/generate.html
+++ b/generate.html
@@ -37,11 +37,11 @@
         function data() {
             return {
                 "pass": {
-                    "firstName": "Pierre",
-                    "lastName": "Losson",
-                    "purpose": "Beer",
+                    "firstName": "",
+                    "lastName": "",
+                    "purpose": "",
                 },
-                "form": false,
+                "view": "form",
                 "complete": function () {
                     return this.pass.firstName && this.pass.lastName && this.pass.purpose;
                 },
@@ -57,6 +57,7 @@
                     console.log(text);
                     console.log(dgc.decodeDGC(text));
                     document.getElementById("qrcode").innerHTML = "";
+                    document.getElementById("qrcode-large").innerHTML = "";
                     this.qrcode = new QRCode(document.getElementById("qrcode"), {
                         text: dgc.encodeDGC(this.pass),
                         width: 300,
@@ -65,8 +66,16 @@
                         colorLight: "#ffffff",
                         correctLevel: QRCode.CorrectLevel.H
                     });
+                    this.qrcode = new QRCode(document.getElementById("qrcode-large"), {
+                        text: dgc.encodeDGC(this.pass),
+                        width: 300,
+                        height: 300,
+                        colorDark: "#000000",
+                        colorLight: "#ffffff",
+                        correctLevel: QRCode.CorrectLevel.H
+                    });
 
-                    this.form = false;
+                    this.view = 'qr';
                     /*setTimeout(() => {
                         let qelem = document.querySelector('#qrcode img')
                         let dlink = document.querySelector('#qrdl')
@@ -77,7 +86,6 @@
                     }, 100);*/
                 },
                 "init": function () {
-                    this.generate();
                 },
             }
         }
@@ -96,8 +104,8 @@
     <script src="//unpkg.com/alpinejs" type="text/javascript" defer></script>
 </head>
 
-<body x-data="data" id="body" class="flex flex-col">
-<div id="form" class="w-full" x-show="form">
+<body x-data="data" id="body" class="flex flex-col h-full">
+<div id="form" class="w-full" x-show="view=='form'">
     <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="firstName">
@@ -128,15 +136,39 @@
         </div>
     </form>
 </div>
-<div id="result" x-show="!form" class="p-4 flex flex-col items-center">
+<div id="qr" x-show="view=='qr'" class="p-4 flex flex-col items-center bg-green-50 h-screen">
     <div class=""><span x-text="cst"></span></div>
-    <div id="qrcode" class="p-3 border-blue-500 rounded-2xl border-4"></div>
-    <div id="download" class="mt-5">
-        <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" id="qrdl"
-           hidden>Download</a>
+    <div id="qrcode" class="w-7/12 p-3 border-blue-500 rounded-2xl border-4 mt-2" x-on:click="view='details'"></div>
+    <div id="info">
+        <p class="text-xs mt-2">Tap the QR-code to enlarge</p>
     </div>
+    <div class="w-11/12 mt-5 p-3 bg-black text-gray-200 relative overflow-hidden rounded-xl flex flex-col">
+        <div class="h-1/2 absolute self-end flex flex-row -mt-8 -mr-8">
+            <div class="justify-end">
+                <img class=" h-full object-scale-down" src="/public/img/eu_avatar_big_light.svg"/>
+            </div>
+        </div>
+        <div class="mb-2">
+            <p class="text-xs">Last name</p>
+            <p><span x-text="pass.lastName"></span></p>
+        </div>
+        <div class="mb-2">
+            <p class="text-xs">Given name</p>
+            <p><span x-text="pass.firstName"></span></p>
+        </div>
+        <div>
+            <p class="text-xs">What I want ? </p>
+            <p><span x-text="pass.purpose"></span></p>
+        </div>
+    </div>
+    <div class="mt-3">
+        <a href="#" x-on:click="view='form'">Create another QR code</a>
+    </div>
+</div>
+<div id="qr-detail" x-show="view=='details'" class="p-4 flex flex-col h-screen items-center">
+    <div id="qrcode-large" class="w-11/12 p-3 border-blue-500 rounded-2xl border-4 m-auto"></div>
     <div class="mt-5">
-        <a href="#" x-on:click="form=true">Back</a>
+        <a href="#" x-on:click="view='qr'" class="font-bold">Back to overview</a>
     </div>
 </div>
 </body>
