--- a/generate.html
+++ b/generate.html
@@ -36,11 +36,14 @@
     <script type="text/javascript">
         function data() {
             return {
+                "examples": ["Beer", "Pita", "Durum", "Wine", "Vodka"],
+                "exampleIndex": 0,
                 "pass": {
                     "firstName": "",
                     "lastName": "",
                     "purpose": "",
                 },
+                "example": "Beer",
                 "view": "form",
                 "complete": function () {
                     return this.pass.firstName && this.pass.lastName && this.pass.purpose;
@@ -86,6 +89,10 @@
                     }, 100);*/
                 },
                 "init": function () {
+                    setInterval(function () {
+                        //this.exampleIndex = (this.exampleIndex + 1) % this.examples.length;
+                        this.example = dgc.randomName();
+                    }.bind(this), 2000);//run this thang every 2 seconds
                 },
             }
         }
@@ -106,7 +113,10 @@
 
 <body x-data="data" id="body" class="flex flex-col h-full">
 <div id="form" class="w-full" x-show="view=='form'">
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col items-center">
+        <div class="mb-4">
+            <h1>Generate your <span x-text="example" class="underline font-bold"></span> Safe Ticket</h1>
+        </div>
         <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="firstName">
                 First Name
@@ -142,12 +152,8 @@
     <div id="info">
         <p class="text-xs mt-2">Tap the QR-code to enlarge</p>
     </div>
-    <div class="w-11/12 mt-5 p-3 bg-black text-gray-200 relative overflow-hidden rounded-xl flex flex-col">
-        <div class="h-1/2 absolute self-end flex flex-row -mt-8 -mr-8">
-            <div class="justify-end">
-                <img class=" h-full object-scale-down" src="/public/img/eu_avatar_big_light.svg"/>
-            </div>
-        </div>
+    <div class="w-11/12 mt-5 p-3 bg-black text-gray-200 relative overflow-hidden rounded-xl flex flex-col"
+         style="background-image: url('/public/img/eu_avatar_big_light_cropped.png'); background-repeat: no-repeat; background-position: right 0 top 0;">
         <div class="mb-2">
             <p class="text-xs">Last name</p>
             <p><span x-text="pass.lastName"></span></p>
@@ -166,7 +172,7 @@
     </div>
 </div>
 <div id="qr-detail" x-show="view=='details'" class="p-4 flex flex-col h-screen items-center">
-    <div id="qrcode-large" class="w-11/12 p-3 border-blue-500 rounded-2xl border-4 m-auto"></div>
+    <div id="qrcode-large" class="w-11/12 p-3 border-blue-500 rounded-2xl border-4" style="margin-top: 40%"></div>
     <div class="mt-5">
         <a href="#" x-on:click="view='qr'" class="font-bold">Back to overview</a>
     </div>
