--- a/generate.html
+++ b/generate.html
@@ -33,6 +33,7 @@
           rel="stylesheet">
     <script src="/bundle.js"></script>
     <script src="//cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.13/lottie.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         function data() {
             return {
@@ -78,6 +79,23 @@
                         correctLevel: QRCode.CorrectLevel.H
                     });
 
+                    bodymovin.destroy();
+                    bodymovin.loadAnimation({
+                        container: document.getElementById('bm'),
+                        renderer: 'svg',
+                        loop: true,
+                        autoplay: true,
+                        path: '/public/json/qr_code.json'
+                    });
+
+                    bodymovin.loadAnimation({
+                        container: document.getElementById('bm-large'),
+                        renderer: 'svg',
+                        loop: true,
+                        autoplay: true,
+                        path: '/public/json/qr_code.json'
+                    });
+
                     this.view = 'qr';
                     /*setTimeout(() => {
                         let qelem = document.querySelector('#qrcode img')
@@ -109,6 +127,24 @@
         }
     </script>
     <script src="//unpkg.com/alpinejs" type="text/javascript" defer></script>
+    <style type="text/css">
+        #qr-content, #qr-content-large {
+            max-height: 500px;
+            max-width: 500px;
+            position: relative;
+        }
+        #qr-content #bm, #qr-content #bm-large {
+            width: 100%;
+            height: 100%;
+        }
+        #qrcode, #qrcode-large {
+            width: 90%;
+            height: 90%;
+            position: absolute;
+            left: 5%;
+            top: 5%;
+        }
+    </style>
 </head>
 
 <body x-data="data" id="body" class="flex flex-col h-full">
@@ -148,7 +184,10 @@
 </div>
 <div id="qr" x-show="view=='qr'" class="p-4 flex flex-col items-center bg-green-50 h-screen">
     <div class=""><span x-text="cst"></span></div>
-    <div id="qrcode" class="w-7/12 p-3 border-blue-500 rounded-2xl border-4 mt-2" x-on:click="view='details'"></div>
+    <div id="qr-content">
+        <div id="bm"></div>
+        <div id="qrcode" class="w-7/12" x-on:click="view='details'"></div>
+    </div>
     <div id="info">
         <p class="text-xs mt-2">Tap the QR-code to enlarge</p>
     </div>
@@ -172,14 +211,13 @@
     </div>
 </div>
 <div id="qr-detail" x-show="view=='details'" class="p-4 flex flex-col h-screen items-center">
-    <div id="qrcode-large" class="w-11/12 p-3 border-blue-500 rounded-2xl border-4" style="margin-top: 40%"></div>
+    <div id="qr-content-large" class="mt-20">
+        <div id="bm-large"></div>
+        <div id="qrcode-large" class="w-11/12"></div>
+    </div>
     <div class="mt-5">
         <a href="#" x-on:click="view='qr'" class="font-bold">Back to overview</a>
     </div>
 </div>
 </body>
 </html>
-
-
-
-
