--- a/generate.html
+++ b/generate.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Covid Scan Web</title>
-    <meta name="description" content="Covid Scan Web">
-    <meta name="author" content="Covid Scan Web">
+    <title>Covid Safe Web</title>
+    <meta name="description" content="Covid Safe Web">
+    <meta name="author" content="Covid Safe Web">
 
-    <meta property="og:title" content="Covid Scan Web">
+    <meta property="og:title" content="Covid Safe Web">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://covid-scan.link/">
-    <meta property="og:description" content="Scan CST and DGC QR codes without any application">
+    <meta property="og:url" content="https://covid-safe.link/">
+    <meta property="og:description" content="Generate your own personalized ticket !">
     <meta property="og:image" content="/public/img/favicon-152x152.png">
 
     <link rel="icon" type="image/png" sizes="32x32" href="/public/img/favicon-32x32.png">
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="/public/img/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/public/img/touch-icon-ipad-retina.png">
     <meta name="application-name"
-          content="CovidScan - The official Belgian app to scan and validate EU Digital COVID-certificates"/>
+          content="CovidSafe - The unofficial Belgian site to create your personal digital certificates"/>
 
     <link href="//unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
