--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@
 
         function data() {
             return {
-                "debug": false,
-                "page": location.hash,
-                "scanEnabled": true,
                 "locked": true,
-                "found": false,
+                "found": true,
                 "pass": {
-                    "type": "",
+                    "type": "f",
                     "v": [{
                         "co": "BE",
                         "dt": "2021-07-21",
@@ -55,7 +52,7 @@
                     }],
                     "t": [{"daysAgo": 43}],
                     "r": [{"daysAgo": 43}],
-                    "f": [{"daysAgo": 0}],
+                    "f": [{"daysAgo": 0, "message": "Hello World"}],
                     "dob": "1975-01-01",
                     "dob_str": "January 1st 1975",
                     "age": 45,
@@ -67,13 +64,6 @@
                     }
                 },
                 "cameraId": "",
-                "changePage": function () {
-                    this.page = location.hash;
-                    if (this.page === '') {
-                        //console.log("start scanning again");
-                        this.scanEnabled = true;
-                    }
-                },
                 "init": function () {
                     // This method will trigger user permissions
                     Html5Qrcode.getCameras().then(devices => {
@@ -156,7 +146,7 @@
     <script src="//unpkg.com/alpinejs" type="text/javascript" defer></script>
 </head>
 
-<body x-data="data" @hashchange.window="changePage()" id="body" class="flex flex-col">
+<body x-data="data" id="body" class="flex flex-col">
 <header class="sticky top-0 z-50 flex flex-col bg-white p-2 font-medium">
     <div class="flex flex-row">
         <div class="flex-1 text-center text-lg" x-show="found">
@@ -178,6 +168,44 @@
     </div>
     <div x-show="pass.type == 'f'" class="bg-yellow-200">
         <p class="text-center text-base">Valid <span x-text="pass.f[0].t"></span> for <span x-text="pass.f[0].p"></span> created <span x-text="pass.f[0].daysAgo"></span> days ago</p>
+        <!--Overlay Effect-->
+        <div
+            class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full" id="my-modal">
+            <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
+                <div class="mt-3 text-center">
+                    <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
+                        <svg
+                            class="h-6 w-6 text-green-600"
+                            fill="none"
+                            stroke="currentColor"
+                            viewBox="0 0 24 24"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M5 13l4 4L19 7"
+                            ></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg leading-6 font-medium text-gray-900">Successful!</h3>
+                    <div class="mt-2 px-7 py-3">
+                        <p class="text-sm text-gray-500">
+                            Account has been successfully registered!
+                        </p>
+                    </div>
+                    <div class="items-center px-4 py-3">
+                        <button
+                            id="ok-btn"
+                            class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-300"
+                        >
+                            OK
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
 <main class="photo flex-1 overflow-y-auto bg-black" id="videoContainer"></main>
