add message and persist first & last

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         function data() {
             return {
                 "locked": true,
-                "found": true,
+                "found": false,
                 "pass": {
-                    "type": "f",
+                    "type": "",
                     "v": [{
                         "co": "BE",
                         "dt": "2021-07-21",
@@ -52,7 +52,7 @@
                     }],
                     "t": [{"daysAgo": 43}],
                     "r": [{"daysAgo": 43}],
-                    "f": [{"daysAgo": 0, "message": "Hello World"}],
+                    "f": [{"daysAgo": 0, "m": "Hello World"}],
                     "dob": "1975-01-01",
                     "dob_str": "January 1st 1975",
                     "age": 45,
@@ -63,6 +63,7 @@
                         "gnt": "JOHN"
                     }
                 },
+                "showModal": true,
                 "cameraId": "",
                 "init": function () {
                     // This method will trigger user permissions
@@ -79,18 +80,9 @@
                     });
 
                 },
-                "restartScanning": function () {
-                    this.locked = true;
-                    window.location.hash = '#';
-                },
-                "stopScanning": function () {
-                    html5QrCode.stop().then(ignore => {
-                        // QR Code scanning is stopped.
-                        //console.log("QR Code scanning stopped.");
-                    }).catch(err => {
-                        // Stop failed, handle it.
-                        //console.log("Unable to stop scanning." + err);
-                    });
+                "reset": function () {
+                    this.found = false;
+                    this.pass = {};
                 },
                 "startScanning": function () {
                     //console.log('scanning started with ' + this.cameraId)
@@ -113,8 +105,7 @@
                                     this.pass = result.json;
                                 }
                                 setTimeout(function () {
-                                    this.found = false;
-                                    this.pass = {};
+                                    this.reset();
                                 }.bind(this), 3000);
                             } catch (e) {
                                 console.log(e);
@@ -168,38 +159,15 @@
     </div>
     <div x-show="pass.type == 'f'" class="bg-yellow-200">
         <p class="text-center text-base">Valid <span x-text="pass.f[0].t"></span> for <span x-text="pass.f[0].p"></span> created <span x-text="pass.f[0].daysAgo"></span> days ago</p>
-        <!--Overlay Effect-->
-        <div
-            class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full" id="my-modal">
+        <div class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full" id="f-message" x-show="found && pass.type == 'f' && pass.f[0].m">
             <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
                 <div class="mt-3 text-center">
-                    <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
-                        <svg
-                            class="h-6 w-6 text-green-600"
-                            fill="none"
-                            stroke="currentColor"
-                            viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg"
-                        >
-                            <path
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                stroke-width="2"
-                                d="M5 13l4 4L19 7"
-                            ></path>
-                        </svg>
-                    </div>
-                    <h3 class="text-lg leading-6 font-medium text-gray-900">Successful!</h3>
+                    <h3 class="text-lg leading-6 font-medium text-gray-900">You have a message!</h3>
                     <div class="mt-2 px-7 py-3">
-                        <p class="text-sm text-gray-500">
-                            Account has been successfully registered!
-                        </p>
+                        <p class="text-sm text-gray-500" x-text="pass.f[0].m"></p>
                     </div>
                     <div class="items-center px-4 py-3">
-                        <button
-                            id="ok-btn"
-                            class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-300"
-                        >
+                        <button x-on:click="reset()" id="f-message-ok" class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-300">
                             OK
                         </button>
                     </div>
