--- a/generate.html
+++ b/generate.html
@@ -14,6 +14,13 @@
     <meta property="og:url" content="https://covid-safe.link/">
     <meta property="og:description" content="Generate your own personalized ticket !">
     <meta property="og:image" content="/public/img/favicon-152x152.png">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="CST (Un)offical App"/>
+    <meta name="twitter:description" content="Generate your own personalized Safe Ticket !"/>
+    <meta name="twitter:image:src" content="/public/img/favicon-152x152.png"/>
+
     <meta name="application-name"
           content="CovidSafe - The unofficial Belgian site to create your personal digital certificates"/>
     <script src="/bundle.js"></script>
