--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <meta name="description" content="Covid Scan Web">
     <meta name="author" content="Covid Scan Web">
 
+    <!-- open graph -->
     <meta property="og:title" content="Covid Scan Web">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://covid-scan.link/">
     <meta property="og:description" content="Scan CST and DGC QR codes without any application">
     <meta property="og:image" content="/public/img/favicon-152x152.png">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="CST Scan (Un)offical App"/>
+    <meta name="twitter:description" content="Scan CST and DGC QR codes without any application"/>
+    <meta name="twitter:image:src" content="/public/img/favicon-152x152.png"/>
+
     <script src="/bundle.js"></script>
     <%= require('html-loader!./header.html').default %>
     <script src="/public/js/html5-qrcode.min.js" type="text/javascript"></script>
