--- a/generate.html
+++ b/generate.html
@@ -13,13 +13,13 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://covid-safe.link/">
     <meta property="og:description" content="Generate your own personalized ticket !">
-    <meta property="og:image" content="/public/img/favicon-152x152.png">
+    <meta property="og:image" content="https://covidsafe.be/uploads/_1200x630_crop_center-center_82_none/OG_NL.jpg?mtime=162384041">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="CST (Un)offical App"/>
     <meta name="twitter:description" content="Generate your own personalized Safe Ticket !"/>
-    <meta name="twitter:image:src" content="/public/img/favicon-152x152.png"/>
+    <meta name="twitter:image:src" content="https://be.covid-scan.link/public/img/favicon-152x152.png"/>
 
     <meta name="application-name"
           content="CovidSafe - The unofficial Belgian site to create your personal digital certificates"/>
