--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="CST Scan (Un)offical App"/>
     <meta name="twitter:description" content="Scan CST and DGC QR codes without any application"/>
-    <meta name="twitter:image:src" content="/public/img/favicon-152x152.png"/>
+    <meta name="twitter:image:src" content="https://be.covid-scan.link/public/img/favicon-152x152.png"/>
 
     <script src="/bundle.js"></script>
     <%= require('html-loader!./header.html').default %>
