--- a/generate.html
+++ b/generate.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://covid-safe.link/">
     <meta property="og:description" content="Generate your own personalized ticket !">
-    <meta property="og:image" content="https://covidsafe.be/uploads/_1200x630_crop_center-center_82_none/OG_NL.jpg?mtime=162384041">
+    <meta property="og:image" content="https://be.covid-scan.link/public/img/favicon-152x152.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary"/>
