--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://covid-scan.link/">
     <meta property="og:description" content="Scan CST and DGC QR codes without any application">
-    <meta property="og:image" content="/public/img/favicon-152x152.png">
+    <meta property="og:image" content="https://be.covid-scan.link/public/img/favicon-152x152.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary"/>
